build: change to the sdfgen tool for sdf generation
In order to correctly use the sDDF driver framework the sdfgen tool
needs to be used. We could add the all the drivers manually in the SDF
with the corresponding buffers, but it would be a pain in the ass.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 vendor/microkit-sdk
 
-build/seriald/*.o
-build/seriald.elf
+build/webserver/*.o
+build/webserver.elf
 
 build/loader.img
 build/report.txt
+
+qemuvirt.dtb
+webserver.system
